Fix feed alignment

--- a/source/assets/css/components/banner.scss
+++ b/source/assets/css/components/banner.scss
@@ -9,18 +9,14 @@
 }
 
 .banner__inner--lp {
-  top: 50%;
-
-  transform: translateY(-50%);
+  bottom: 0;
 
   @extend %e-bgc-opaque-1;
   @extend %e-mgn-t-md;
-  @include below(md) {
-    top: 100%;
+  @include above(md) {
+    bottom: 50%;
 
-    padding-bottom: 5rem;
-
-    transform: translateY(-100%);
+    transform: translateY(50%);
   }
 }
 
