--- a/source/assets/css/components/feed-item.scss
+++ b/source/assets/css/components/feed-item.scss
@@ -23,7 +23,7 @@
   padding-bottom: 20%;
 
   @extend %e-bgc-brand-green-2;
-  @extend %e-mgn-t-xs;
+  @extend %e-mgn-t-xxs;
   @extend %e-mgn-r-sm;
   @extend %e-overflow-hidden;
   @extend %e-position-relative;
